登录界面修改

--- a/QueueMach/Pages/LoginView.xaml
+++ b/QueueMach/Pages/LoginView.xaml
@@ -3,7 +3,7 @@
         xmlns:attach="clr-namespace:Utilities.AttachProp" xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:QueueMach" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:s="https://github.com/canton7/Stylet"
-        Title="LoginView"
+        Title="登录"
         Width="300" Height="auto"
         Background="White" SizeToContent="Height"
         mc:Ignorable="d">
