--- a/QueueMach/Pages/ShellView.xaml
+++ b/QueueMach/Pages/ShellView.xaml
@@ -11,7 +11,7 @@
     <Window.Resources>
         <Style TargetType="{x:Type GroupBox}">
             <Setter Property="DockPanel.Dock" Value="Top" />
-            <Setter Property="BorderBrush" Value="Black" />
+            <Setter Property="BorderBrush" Value="LightGray" />
         </Style>
     </Window.Resources>
     <Border>
